ara funciona un pas endevant

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="_Libra">Libra</string>
     <string name="_Euros">EUROS</string>
     <string name="_num0">0</string>
+    <string name="_Coma">,</string>
 </resources>
